--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,9 @@ name = "tic"
 version = "0.1.0"
 description = "Python emulation for agents."
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "tiktoken",
+]
 
 [project.optional-dependencies]
 dev = [
