--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Python emulation for agents."
 requires-python = ">=3.12"
 dependencies = [
     "tiktoken",
+    "xxhash",
 ]
 
 [project.optional-dependencies]
