feat: stdout as user msg, example img export, def tweaks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ test = [
 ]
 examples = [
     "plotly[express]",
+    "kaleido",  # for exporting plotly figures
     "numpy",
     "nbformat",
     "pandas",
