--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,18 @@ dev = [
 ]
 test = [
     "pytest",
+    "anyio",
     "numpy",
+    "pandas",
+    "anthropic",
+    "google-generativeai",
+    "openai",
+    "tiktoken",
+    "matplotlib"
+]
+vision = [
+    "Pillow",
+    "matplotlib",
 ]
 examples = [
     "plotly[express]",
