--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -40,8 +40,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install mkdocs-material
-        pip install jupyterlite-core
+        pip install -r requirements-docs.txt
         pip install -e ".[dev,test,all-providers]"
 
     - name: Setup Pages
