--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -41,6 +41,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements-docs.txt
+        pip install build  # For building wheels
         pip install -e ".[dev,test,all-providers]"
 
     - name: Setup Pages
@@ -53,10 +54,14 @@ jobs:
 
     - name: Build JupyterLite
       run: |
+        # Build agex wheel for JupyterLite
+        python -m build --wheel
+        
         # Create JupyterLite environment with agex examples
         jupyter lite build \
           --contents examples/notebook \
-          --output-dir _site/lite
+          --output-dir _site/lite \
+          --pyodide dist/*.whl
 
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
