--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -2,6 +2,7 @@
 mkdocs-material>=9.4.0
 mkdocs-minify-plugin>=0.7.0
 jupyterlite-core>=0.2.0
+jupyterlite-pyodide-kernel>=0.2.0
 jupyter-server>=2.0.0
 
 # Optional enhancements
