--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ theme:
     - content.code.annotate
   icon:
     logo: material/code-braces
+    favicon: material/code-braces
     repo: fontawesome/brands/github
 
 nav:
