doc: MIT license

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,30 @@
 [project]
 name = "agex"
 version = "0.1.0"
-description = "Python emulation for agents."
+description = "Library-friendly agents that work directly with your existing Python codebase."
+readme = "README.md"
+license = {text = "MIT"}
+authors = [
+    {name = "ashenfad"},
+]
+keywords = ["agents", "ai", "llm", "python", "runtime", "sandbox"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
 requires-python = ">=3.12"
+
+[project.urls]
+Homepage = "https://ashenfad.github.io/agex/"
+Documentation = "https://ashenfad.github.io/agex/"
+Repository = "https://github.com/ashenfad/agex"
+Issues = "https://github.com/ashenfad/agex/issues"
+
 dependencies = [
     "tiktoken",
     "xxhash", 
