--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,8 @@ examples = [
     "numpy",
     "nbformat",
     "pandas",
+    "osmnx>=2.0.0",
+    "folium",
 ]
 # LLM provider dependencies
 openai = [
