--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,8 +50,10 @@ nav:
   - Examples:
     - Overview: examples/overview.md
     - Agex 101 (notebook): examples/agex101.ipynb
+    - Routy (notebook): examples/routy.ipynb
     - Mathy: examples/mathy.md
     - Funcy: examples/funcy.md
+    - Routy: examples/routy.md
     - DB (SQLite): examples/db.md
     - Hierarchical: examples/hierarchical.md
     - Evaluator–Optimizer: examples/evaluator_optimizer.md
