--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,7 @@ line-length = 88
 
 [tool.ruff.lint]
 select = ["E4", "E7", "E9", "F", "I"]
+ignore = ["E731"]
 
 [tool.pytest.ini_options]
 pythonpath = [
